[gd_scene load_steps=6 format=3 uid="uid://dumb0fxvvybr3"]

[ext_resource type="Theme" uid="uid://38sxdk6fgi5p" path="res://ressources/themes/BigText.tres" id="1_3hk56"]
[ext_resource type="Script" path="res://scripts/managers/engines/dice_engine.gd" id="1_d4hli"]
[ext_resource type="Script" path="res://scripts/managers/engines/spawn_engine.gd" id="2_6p6g1"]
[ext_resource type="Script" path="res://scripts/managers/turn_manager.gd" id="4_gytap"]
[ext_resource type="Script" path="res://scripts/managers/combat_manager.gd" id="5_320c1"]

[node name="Main" type="Node"]

[node name="Gui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogBox" type="TextEdit" parent="Gui"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1250, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -224.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
scroll_smooth = true

[node name="LeftPanel" type="VBoxContainer" parent="Gui"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -518.0
offset_right = 100.0
offset_bottom = 518.0
grow_vertical = 2

[node name="PlayerHp" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="HpTextLabel" type="RichTextLabel" parent="Gui/LeftPanel/PlayerHp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "Hp :"

[node name="PlayerHpLabel" type="RichTextLabel" parent="Gui/LeftPanel/PlayerHp"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "0"

[node name="Panel2" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel3" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel4" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel5" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel6" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel7" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel8" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel9" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel10" type="Panel" parent="Gui/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="Gui"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -518.0
offset_bottom = 518.0
grow_horizontal = 0
grow_vertical = 2

[node name="WaveHp" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="WaveHpText" type="RichTextLabel" parent="Gui/RightPanel/WaveHp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "HP :"

[node name="WaveHpLabel" type="RichTextLabel" parent="Gui/RightPanel/WaveHp"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "0"

[node name="WaveAttack" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="WaveAttackText" type="RichTextLabel" parent="Gui/RightPanel/WaveAttack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "AT :"

[node name="WaveAttackLabel" type="RichTextLabel" parent="Gui/RightPanel/WaveAttack"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "0"

[node name="Panel3" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel4" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel5" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel6" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel7" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel8" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel9" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel10" type="Panel" parent="Gui/RightPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="CenterPanel" type="HBoxContainer" parent="Gui"]
custom_minimum_size = Vector2(1250, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -625.0
offset_top = -100.0
offset_right = 625.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AttackPanell" type="Panel" parent="Gui/CenterPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="UpgradeAttackButton" type="Button" parent="Gui/CenterPanel/AttackPanell"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Upgrade Attack"

[node name="AttackInfos" type="Panel" parent="Gui/CenterPanel/AttackPanell"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerAttackText" type="RichTextLabel" parent="Gui/CenterPanel/AttackPanell/AttackInfos"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = " AT"

[node name="PlayerAttackLabel" type="RichTextLabel" parent="Gui/CenterPanel/AttackPanell/AttackInfos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_3hk56")
text = "0"

[node name="AttackButton" type="Button" parent="Gui/CenterPanel/AttackPanell"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Attack"

[node name="SpawnButton" type="Button" parent="Gui/CenterPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "SPAWN WAVE"

[node name="DicePanel" type="HBoxContainer" parent="Gui"]
custom_minimum_size = Vector2(1250, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -625.0
offset_right = 625.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="Dice" type="Panel" parent="Gui/DicePanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="DiceText" type="RichTextLabel" parent="Gui/DicePanel/Dice"]
layout_mode = 0
offset_right = 196.0
offset_bottom = 40.0
text = "              Dice result"

[node name="DiceLabel" type="RichTextLabel" parent="Gui/DicePanel/Dice"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = 48.0
offset_right = 196.0
offset_bottom = 168.0
theme = ExtResource("1_3hk56")
text = "0"

[node name="World" type="Node2D" parent="."]

[node name="Managers" type="Node" parent="."]

[node name="Engines" type="Node" parent="Managers"]

[node name="DiceEngine" type="Node" parent="Managers/Engines"]
unique_name_in_owner = true
script = ExtResource("1_d4hli")

[node name="SpawnEngine" type="Node" parent="Managers/Engines"]
unique_name_in_owner = true
script = ExtResource("2_6p6g1")

[node name="CombatManager" type="Node" parent="Managers"]
unique_name_in_owner = true
script = ExtResource("5_320c1")

[node name="TurnManager" type="Node" parent="Managers"]
unique_name_in_owner = true
script = ExtResource("4_gytap")

[connection signal="pressed" from="Gui/CenterPanel/AttackPanell/UpgradeAttackButton" to="Managers/CombatManager" method="_on_upgrade_attack_button_pressed"]
[connection signal="pressed" from="Gui/CenterPanel/AttackPanell/AttackButton" to="Managers/CombatManager" method="_on_attack_button_pressed"]
[connection signal="pressed" from="Gui/CenterPanel/SpawnButton" to="Managers/CombatManager" method="_on_spawn_button_pressed"]
